Finished writing about productivity

--- a/Content/ReflectionMethodology/reflectionPairProgramming.tex
+++ b/Content/ReflectionMethodology/reflectionPairProgramming.tex
@@ -98,24 +98,29 @@ Further, the solutions are often more elegant when pair programming than when pr
 
 
 \subsection{Productivity}
-One of the major concerns about pair programming is if it is productive enough to ``seal'' the work force of two developers for a single story.
-We are not in a position to conclude this, but in our opinion it depends on the team using it.
+One of the major concerns about pair programming is whether it is productive enough to restrict the work force of two developers for a single story.
+We are not in a position to provide a definite conclusion on this, but in our opinion it depends on the team using it.
 
 We experienced and rectified some problems with using pair programming in our team.
 First off, when a problem was outside the expertise of both developers, they would both search the internet for an answer.
-This would usually lead to both developers reading the same material and experimenting with the same solutions.
-This can be seen as unproductive, since two developers are during the same task.
-...
+This would usually lead to both developers reading the same material and experimenting with the same solutions, which is unproductive, since two developers are doing the same task, while one of them might as well have spent their time on another task.
 
-Secondly we discovered that if part of the pair got distracted, the other would likely get sucked in as well.
-This gave rise to some situations where both developers unknowingly supported each others slacking.
-These situations often started with the co-driver getting exhausted and then easily distracted.  
+Secondly, we discovered that if part of the pair got distracted, the other would likely get distracted as well.
+This gave rise to some situations where both developers unknowingly supported each others unproductiveness.
+These situations often started with the co-driver getting exhausted and then easily distracted.
+To avoid problems like this, the entire team has to help each other keep focus.
+The lack of focus may, however, be contributed to a number of different influences, such as too few breaks or too little communication.
+The underlying issues need to be taken care of on a case to case basis.
 
-%when both have no idea or expertise
-%distractions and keeping each other working
-%Faster ideas
-%Trivial issues vs complicated issues
-%Mention less refactoring (code review) from quality
+While some times having problems with distractions, we more often experienced the pair motivating each other to keep working.
+Having a partner when working on something gives a sense of obligation, and as long as neither start getting distracted, pair programming works great for keeping a good work morale.
+
+When working on a project, some of the stories will be trivial to implement.
+In these situations a single programmer could easily write high quality code by himself, making pair programming less useful.
+Sometimes, however, it can be hard to determine when a task is too trivial to require pair programming, and the resulting overhead caused by trying decide this may be better spent on doing the pair programming instead, as a trivial story will not take long to implement.
+In contrast to this are the more complicated stories.
+This is where pair programming really shines, as it allows for a synergetic effect between the driver and co-driver.
+The driver has a sparring partner for helping with ideas, structure, and perspective, and as such he is free to concentrate on the how to implement the story.
 
 
 
