minor change to mod of xp in methodology

--- a/Content/Methodology/modificationsOfXP.tex
+++ b/Content/Methodology/modificationsOfXP.tex
@@ -64,7 +64,7 @@ We will connect these to our laptops to create two workstations ready for pair p
 There exists several versions of how to program in pairs. We will try different methods to experience the advantages, and disadvantages of the different versions.
 
 \subsection{Planning Game}
-Planning is important. It lets you know how fast you work, what to do next, provides an effective means of communication with the customer, and allows you to quickly respond to changes since the iteration backlog is open for entirety of an iteration.
+Planning is important. It lets you know how fast you work, what to do next, provides an effective means of communication with the customer, and allows you to quickly respond to changes if necessary.
 \Kristian{grep for bad cites?}
 
 In XP planning happens in two stages. There is the release planning and the iteration planning.
