minor change to intro in methodology

--- a/Content/Methodology/introduction.tex
+++ b/Content/Methodology/introduction.tex
@@ -1,1 +1,1 @@
-Extreme Programming (XP) is a relatively new software development methodology created by Kent Beck, and this chapter is based on his book \textit{Extreme Programming Explained (1999)} \citep{xp:explained}, William Wake's book \textit{Extreme Programming Explored (2000)} \citep{xp:explored}, and Don Wells' interactive introduction \textit{Extreme Programming: A Gentle Introduction (2013)} \citep{xp:online}.
+Extreme Programming (XP) is a relatively new software development methodology created by Kent Beck. This chapter is based on his book \textit{Extreme Programming Explained (1999)} \citep{xp:explained}, William Wake's book \textit{Extreme Programming Explored (2000)} \citep{xp:explored}, and Don Wells' interactive introduction \textit{Extreme Programming: A Gentle Introduction (2013)} \citep{xp:online}.
