removed line from musicplayer intro

--- a/Content/MusicPlayer/introduction.tex
+++ b/Content/MusicPlayer/introduction.tex
@@ -1,1 +1,1 @@
-Behind the scenes, Tempo Player consists of a number of modules, each playing an important role in the overall functionality of the application. In the following chapters the module implementations and associated user stories will be presented. In these chapters we will be using Android related to terms describe the modules therefore these will be described first. Then user stories and implementations will for the music player modules be covered.
+Behind the scenes, Tempo Player consists of a number of modules, each playing an important role in the overall functionality of the application. In the following chapters the module implementations and associated user stories will be presented. In these chapters we will be using Android related to terms describe the modules therefore these will be described first. %Then user stories and implementations will for the music player modules be covered.
