--- a/Content/ReflectionMethodology/reflectionPairProgramming.tex
+++ b/Content/ReflectionMethodology/reflectionPairProgramming.tex
@@ -2,7 +2,7 @@
 \Ivan{Kap 10.1-3: Sørg for at uddyb dem grundigt!}
 Throughout the project we experimented with and observed several interesting things.
 We experimented with things like \textit{workstation setup} and \textit{scheduled partner switches}.
-During the project we made interesting observations about \textit{interpersonal compatibility}, \textit{expertise level}, \textit{roles}, \textit{distractions}, \textit{quality}, and \textit{productivity}.
+During the project we made interesting observations about \textit{interpersonal compatibility}, \textit{roles}, \textit{quality}, and \textit{productivity}.
 
 \subsection{Workstation Setup}
 We have experimented with different kinds of workstation setup.
@@ -62,7 +62,6 @@ Both would likely have solved the problem at the same speed in the end, but now 
 Some of these problems could maybe be alleviated if we had been better at switching roles (i.e., letting the other person drive), but sometimes it can be very difficult to force two conflicting personalities to work together, and we believe it is important to try and make a team where conflicting personalities either are not present, or at least where they are not forced to work together.
 Avoiding a certain combination in a pair may, in conclusion, be preferable to making sure all possible combinations of pairs are used throughout the project.
 
-
 \subsection{Roles}
 The pair consists of two roles: a driver and a co-driver.
 The driver takes care of the coding and the co-driver keeps a sense of perspective and continuously reviews the code while the driver writes it.
@@ -89,13 +88,11 @@ There are two options for solving this problem: either the driver takes some tim
 Both of those options do, however, have  negative side effects.
 The former results in a time-wise overhead, and the latter would result in a period where pair programming is not really taking place, resulting in lower quality code, as the co-driver has to focus on understanding rather than providing a code review.
 
-
 \subsection{Quality}
 One of the major arguments for using pair programming is that is improves the quality of the code produced.
 Although we have no metrics to prove it, we feel like the code we produced was generally of a higher quality than what we usually produce when programming individually.
 This increase in quality, is partly because of the instant code review given by the co-driver, which results in less need for refactoring, and easier maintenance of the code.
 Further, the solutions are often more elegant when pair programming than when programming individually.
-
 
 \subsection{Productivity}
 One of the major concerns about pair programming is whether it is productive enough to restrict the work force of two developers for a single story.
@@ -106,9 +103,9 @@ First off, when a problem was outside the expertise of both developers, they wou
 This would usually lead to both developers reading the same material and experimenting with the same solutions, which is unproductive, since two developers are doing the same task, while one of them might as well have spent their time on another task.
 
 Secondly, we discovered that if part of the pair got distracted, the other would likely get distracted as well.
-This gave rise to some situations where both developers unknowingly supported each others unproductiveness.
-These situations often started with the co-driver getting exhausted and then easily distracted.
-To avoid problems like this, the entire team has to help each other keep focus.
+This gave rise to some situations where both developers unknowingly supported each other's unproductiveness.
+These situations often happened when the co-driver was exhausted and then got easily distracted.
+To avoid problems like this, both partners has to help each other keep focus, and tell each other to get it together if necessary.
 The lack of focus may, however, be contributed to a number of different influences, such as too few breaks or too little communication.
 The underlying issues need to be taken care of on a case to case basis.
 
@@ -116,16 +113,17 @@ While some times having problems with distractions, we more often experienced th
 Having a partner when working on something gives a sense of obligation, and as long as neither start getting distracted, pair programming works great for keeping a good work morale.
 
 When working on a project, some of the stories will be trivial to implement.
-In these situations a single programmer could easily write high quality code by himself, making pair programming less useful.
-Sometimes, however, it can be hard to determine when a task is too trivial to require pair programming, and the resulting overhead caused by trying decide this may be better spent on doing the pair programming instead, as a trivial story will not take long to implement.
-In contrast to this are the more complicated stories.
-This is where pair programming really shines, as it allows for a synergetic effect between the driver and co-driver.
+In these situations a single programmer could easily write high quality code by himself, making pair programming less beneficial.
+Determining when a task is too trivial to require pair programming is difficult, and the resulting overhead from trying to determine this, may be better spent on actually implementing the story while pair programming.
+
+It is when implementing complicated stories, that pair programming really shines.
+It allows for a synergetic effect between the driver and co-driver, allowing them to work better than the two would do separately.
 The driver has a sparring partner for helping with ideas, structure, and perspective, and as such he is free to concentrate on the how to implement the story.
+The co-driver will through communication understand what the driver has in mind, helping him improve his suggestions.
+We experienced this synergetic effect quite a number of times, leaving us with the feeling of pair programming being more productive than individual programming.
 
-
-
-
-
-
-%pp generelt
-%koble det til pp i kap 2 adaptation
+\subsection{Summary}
+In summation we used the workstation setup as planned in \Cref{def:pairprogramming} and compared it to other workstation setups.
+We tried experimenting with different aspects of the practise, as we had planned in \Cref{def:pairprogramming}.
+We found the practise to be very dependent on which team is using it.
+We will therefore recommend others to experiment with the different aspects to find what works for them.
