--- a/Content/TactileInterface/intro.tex
+++ b/Content/TactileInterface/intro.tex
@@ -1,4 +1,4 @@
-The non-graphical user interface (NGUI) provides a way of using the application without having to look at the screen. As mentioned in \Cref{chap:intro} this is a useful feature, as the user may not be able to look at the screen while running, but they may still want to operate the application.
+The non-graphical user interface (NGUI) provides a way of using the application without having to look at the screen. As mentioned in \Cref{chap:intro}, this is a useful feature as the user may not be able to look at the screen while running, but they may still want to operate the application.
 
 Several approaches can be taken when it comes to creating a NGUI, and 
 \Dan{Write a bit about the approach we took. Also remember Ivan's ToDo's}
