--- a/Content/StepCounter/intro.tex
+++ b/Content/StepCounter/intro.tex
@@ -1,3 +1,3 @@
 %In this chapter, the development of the step counter module is explained. The chapter separated into user stories which were the basis for developing the step counter, technology explorations made, implementation of the counter.
 
-The step counter module's responsibility is to count the number of steps a user takes with a smartphone using a built-in accelerometer. In our implementation of the step counter we decided to split the task into a data collection task, testing of algorithm task and an implementation-on-Android task. The reason for doing so is that it makes sense to test different algorithms on the same data set, if they are to be compared.
+The step counter module's responsibility is to count the number of steps a user takes with a smartphone, using a built-in accelerometer. In our implementation of the step counter, we decided to split the task into a data collection task, a testing of algorithm task and an implementation-on-Android task. The reason for doing so is that it makes sense to test different algorithms on the same data set, if they are to be compared.
