--- a/Content/Iteration/release1Intro.tex
+++ b/Content/Iteration/release1Intro.tex
@@ -1,4 +1,4 @@
-When the project just started a formal release was not planned. We had a general idea of the core functionality of the application, and that is what we worked towards. During the first iteration we mostly researched how to build the application, but the work that was done at the end of the 2nd iteration was fundamentally a release. As we got more comfortable with XP, and learned how to better make use of short releases, around the 3rd iteration, we started planning actual releases. To make a base for the following releases, the first release can be described as follows:\Christoffer{What is meant by ``.. to make a base''?}
+When the project just started a formal release was not planned. We had a general idea of the core functionality of the application, and that is what we worked towards. During the first iteration we mostly researched how to build the application, but the work that was done at the end of the 2nd iteration was fundamentally a release. As we got more comfortable with XP, and learned how to better make use of short releases, around the 3rd iteration, we started planning actual releases. To make a foundation for the following releases, the first release can be described as follows:
 
 \textit{The application should be able to handle playing music and navigating a play list, using a graphical user interface.}
 
