--- a/Content/Iteration/release2.tex
+++ b/Content/Iteration/release2.tex
@@ -1,4 +1,4 @@
 \input{Content/Iteration/release2Intro}
 \input{Content/Iteration/release2Eval}
-\input{Content/Iteration/3rdIteration}
-\input{Content/Iteration/4thIteration}
+%\input{Content/Iteration/3rdIteration}
+%\input{Content/Iteration/4thIteration}
