--- a/Report.tex
+++ b/Report.tex
@@ -31,7 +31,7 @@
 \input{Content/TempoPlayer/tempoPlayer}
 \input{Content/TempoPlayer/usageScenario}
 
-\chapter{Iterations and Releases}
+\chapter{Releases}
 \label{chap:iteration}
 \input{Content/Iteration/iteration}
 
