--- a/Content/Iteration/release3.tex
+++ b/Content/Iteration/release3.tex
@@ -1,3 +1,4 @@
 \input{Content/Iteration/release3Intro}
-\input{Content/Iteration/5thIteration}
-\input{Content/Iteration/6thIteration}
+\input{Content/Iteration/release3Eval}
+%\input{Content/Iteration/5thIteration}
+%\input{Content/Iteration/6thIteration}
