--- a/Content/ReflectionMethodology/reflectionPlanning.tex
+++ b/Content/ReflectionMethodology/reflectionPlanning.tex
@@ -1,5 +1,7 @@
 \section{Planning Game}
-%Intro
+Planning is a useful tool.
+We used it primarily as a tool for measuring our velocity, to get an overview of our progress, and to know if we were falling behind schedule.
+Additionally it helps keep the project progressing as the customer desires, by allowing the customer to continuously create user stories, which should be implemented.
 
 \subsection{The Customer's Role}
 %User Stories
