Start of planning

--- a/Content/ReflectionMethodology/reflectionPlanning.tex
+++ b/Content/ReflectionMethodology/reflectionPlanning.tex
@@ -4,6 +4,8 @@ We used it primarily as a tool for measuring our velocity, to get an overview of
 Additionally it helps keep the project progressing as the customer desires, by allowing the customer to continuously create user stories, which should be implemented.
 
 \subsection{The Customer's Role}
+The main responsibilities of the customer is to create user stories and prioritise in which order they should be implemented.
+As stated in \Cref{}, we use a 
 %User Stories
 %Prioritising
 
