First draft of reflection for planning

--- a/Content/Methodology/modificationsOfXP.tex
+++ b/Content/Methodology/modificationsOfXP.tex
@@ -53,6 +53,7 @@ We see this project as a music player that plays music with a tempo matching the
 This metaphor might change throughout this project.
 
 \subsection{On-site Customer}
+\label{def:onsitecustomer}
 Since this is a semester project, we will not have an actual customer.
 In place of the on-site customer, we will act as a surrogate customer.
 This means that we are responsible for the priority, requirement decisions, and creation of acceptance tests, as well as other tasks normally done by the customer.
@@ -66,6 +67,7 @@ There exists several recommendation of how to pair program most efficiently.
 We will try to experiment with different aspects of the practise to experience the advantages, and disadvantages of the different recommendation, as we suspect this is the fastest and most efficient way to learn.
 
 \subsection{Planning Game}
+\label{def:planninggame}
 Planning is important. It lets you know how fast you work, what to do next, provides an effective means of communication with the customer, and allows you to quickly respond to changes if necessary.
 \Kristian{grep for bad cites?}
 
