--- a/Content/ReflectionMethodology/reflectionPlanning.tex
+++ b/Content/ReflectionMethodology/reflectionPlanning.tex
@@ -5,8 +5,10 @@ Additionally it helps keep the project progressing as the customer desires, by a
 
 \subsection{The Customer's Role}
 The main responsibilities of the customer is to create user stories and prioritise in which order they should be implemented.
-As stated in \Cref{}, we use a 
+As stated in \Cref{def:onsitecustomer}, we use a surrogate customer, which means we were responsible  for the tasks normally appointed to the customer.
+
 %User Stories
+The first task we 
 %Prioritising
 
 \subsection{Making Estimations}
