something about estimations

--- a/Content/ReflectionMethodology/reflectionPlanning.tex
+++ b/Content/ReflectionMethodology/reflectionPlanning.tex
@@ -10,6 +10,13 @@ As stated in \Cref{}, we use a
 %Prioritising
 
 \subsection{Making Estimations}
+To properly plan an iteration, it is important to have precise estimations of the issues at hand.
+It allows the customer to easier prioritise each issue or story, and it allows the developers to have an idea of how many issues they can finish during the iteration.
+
+Estimating an issue correctly is, however, a difficult task.
+Many variables play a role in how long an issue takes to solve, and it is often impossible to foresee them all.
+To try to reduce this problem we employed the practice of planning poker, where each member of the team gives their own (anonymous) estimation, and the final estimation is discussed afterwards.
+We found that in the first iterations we underestimated the amount of time needed for the more difficult issues, while we generally estimated correctly when it came to trivial issues.
 
 \subsection{Code Velocity}
 %Velocity and fragmentation
