--- a/Content/TactileInterface/intro.tex
+++ b/Content/TactileInterface/intro.tex
@@ -1,6 +1,6 @@
 The non-graphical user interface (NGUI) provides a way of using the application without having to look at the screen. As mentioned in \Cref{chap:intro}, this is a useful feature as the user may not be able to look at the screen while running, but they may still want to operate the application.
 
-Several approaches can be taken when it comes to creating a NGUI. An interface which recognises gestures, is voice controlled, or is controlled with taps on the screen etc. is possible. We chose the latter.
+Several approaches can be taken when it comes to creating a NGUI. An interface which recognises gestures, is voice controlled, or is controlled with taps on the screen etc. is possible. Taps were chosen over gestures, or voice control as they are easier to perform while running. 
 \Dan{Write a bit about the approach we took. Also remember Ivan's ToDo's}
 \Christoffer{Do people agree with the last line? I tried fixing Dan's todo.}
 %\Kristian{repeat?}
