--- a/Content/TemporaryWorkSheets/Methodology/retrospective1.tex
+++ b/Content/TemporaryWorkSheets/Methodology/retrospective1.tex
@@ -2,12 +2,11 @@
 \paragraph{12. feb - 20. feb}
 
 \subsubsection{Coding Standard}
-We have tried to make the code readable by using field-standards \Ivan{def. field-standards?} (e.g. _privateVariable). Currently some variable names are too short / undescriptive.
+We have tried to make the code readable by using field-standards (e.g. _privateVariable). Currently some variable names are too short / undescriptive.
 We handle standard conflicts when they are discovered.
 However a general coding standard has been discussed and decided upon. It was decided that it was not needed to make a specific code standard document.
 
 The coding standard contains decisions about brackets.
-\Ivan{Nesting?, switches?, complexity?}
 
 \subsubsection{Metaphor}
 Not really relevant for the project because the only people looking at the code are us (the developers) and the supervisor and censor (software people).
