--- a/Content/TemporaryWorkSheets/Methodology/review3.tex
+++ b/Content/TemporaryWorkSheets/Methodology/review3.tex
@@ -35,7 +35,6 @@ Summary of extended meeting at the bottom of this document.
 Antagelser:
 \begin{itemize}
 \item 70 timers arbejde per iteration. Dette svarer til ca. 20 units.
-\Ivan{omsk. velocity begreb}
 \item Der skal skrives en rapport.
 \item Der skal laves en app.
 \end{itemize}
@@ -47,8 +46,6 @@ MVP:
 \item Appen skulle kunne kontrolleres til at kunne: Play, Stop, Pause, Next, Previous. Uden brug af en tændt skærm.
 \item Appen skulle kunne afspille musik og hvad der dertil tilhører (skift til næste efter slut, etc.).
 \item Det er antaget at MVP er funktionel fra armen.
-\item Appen skal være gennemtestet!
-\Ivan{stort krav}
 \item Appen skal kunne automatisk hente BPM data om en sang fra internettet.
 \end{itemize}
 
@@ -64,7 +61,7 @@ If an issue (without any relation to existing issues) is discovered:
 
 When choosing a new task to work on, it is important to select tasks in progress, if any. This can be understood as issues in progress are prioritised highest. Remember it is okay to ‘take’ tasks from other members if they do not work on the task assigned to them.
 
-If (part of) an issue is deemed not important to the project, it should be discussed and agreed between ALL members of the team. If not all members are present, the missing members are contacted to set of a meeting. If no response, then pause the issue and discuss it when response. \Ivan{??}
+If (part of) an issue is deemed not important to the project, it should be discussed and agreed between ALL members of the team. If not all members are present, the missing members are contacted to set of a meeting. If no response, then pause the issue and discuss it when response.
 
 \paragraph{Pushing to Master and Fixing Crashes}
 How do we make sure the maser is in a good place.
