--- a/Content/TemporaryWorkSheets/Methodology/review5.tex
+++ b/Content/TemporaryWorkSheets/Methodology/review5.tex
@@ -37,14 +37,13 @@ Summary of extended meeting at the bottom of this document.
 
 
 \textbf{What Did We Accomplish?}
-\Ivan{Elaborate on symptoms and diagnosis. What went wrong? Why did it go wrong?}
 \begin{itemize}
 \item Overall this iteration was much less productive than planned - we expected the more “boring” tasks to result in less productivity, but we were unable to handle it in a satisfying way.
 \item We made a refactoring plan, ensuring somewhat similar refactoring patterns.
 \item We refactored a small part of the program.
-\item We fixed (worked around) a periodic bug because the cover flow hangs, which we solved by just turning off the screen. \Ivan{Ugly, but okay that we write it. Either describe symptoms and diagnosis or just say ``Okay, we are busy, so in this version, we have this bug with a todo, although it is quick and dirty''.}
-\item We discovered that we have not quite tested well enough. \Ivan{Elaborate}
-\item All in all we have been VERY VERY unproductive and have been too easily distracted.
+\item We fixed (worked around) a periodic bug because the cover flow hangs, which we solved by just turning off the screen. 
+\item We discovered that we have not quite tested well enough. 
+\item All in all we have been unproductive and have been too easily distracted.
 \end{itemize}
 
 
