Code velocity reflected.

--- a/Content/TemporaryWorkSheets/Methodology/review5.tex
+++ b/Content/TemporaryWorkSheets/Methodology/review5.tex
@@ -24,6 +24,7 @@ Estimated Planning Poker Time & Time Allocated in Project and Github     \\ \hli
 100 hours                     & 6 Units - three days - 18 hours          \\ \hline
 ??                            & Unknown                                  \\ \hline
 \end{tabular}
+\label{tbl:units}
 \end{table}
 
 Summary of extended meeting at the bottom of this document.
