something something reflections about customers role in plannin

--- a/Content/ReflectionMethodology/reflectionPlanning.tex
+++ b/Content/ReflectionMethodology/reflectionPlanning.tex
@@ -31,6 +31,14 @@ Estimating an issue correctly is, however, a difficult task.
 Many variables play a role in how long an issue takes to solve, and it is often impossible to foresee them all.
 To try to reduce this problem we employed the practice of planning poker, where each member of the team gives their own (anonymous) estimation, and the final estimation is discussed afterwards.
 We found that in the first iterations we underestimated the amount of time needed for the more difficult issues, while we generally estimated correctly when it came to trivial issues.
+The underestimation was likely linked to our inexperience, and we tried to bring our new gained knowledge to the next planning meetings.
+This resulted in us beginning to overestimate the harder stories instead, as we were overcompensating for the fact that we underestimated them before.
+As time went on, we got closer to being correct with medium hard stories, but the harder ones kept being estimated either too high or too low.
+
+As a way of trying to simplify the estimation process, we switched from estimating a story to take a number of hours to take a number of units instead, each unit being half a day.
+\Dan{Kan vi huske en kilde på hvor Beck siger det er en god idé?}
+This allowed us to better put the estimation into perspective in terms of development time, which in turn helped giving us a better idea of how long time a given story should get.
+%But did it help?
 
 \subsection{Code Velocity}
 %Velocity and fragmentation
