User story not issues

--- a/Content/ReflectionMethodology/reflectionPlanning.tex
+++ b/Content/ReflectionMethodology/reflectionPlanning.tex
@@ -27,8 +27,8 @@ Although the product did not end up as what was intended from the get go, it sho
 To properly plan an iteration, it is important to have precise estimations of the issues at hand.
 It allows the customer to easier prioritise each user story, and it allows the developers to have an idea of how many issues they can finish during the iteration.
 
-Estimating an issue correctly is, however, a difficult task.
-Many variables play a role in how long an issue takes to solve, and it is often impossible to foresee them all.
+Estimating an user story correctly is, however, a difficult task.
+Many variables play a role in how long it takes to implement an user story, and it is often impossible to foresee them all.
 To try to reduce this problem we employed the practice of planning poker, where each member of the team gives their own (anonymous) estimation, and the final estimation is discussed afterwards.
 We found that in the first iterations we underestimated the amount of time needed for the more difficult issues, while we generally estimated correctly when it came to trivial issues.
 
@@ -54,5 +54,11 @@ We determined it was the granularity of the measuring units, which were at fault
 We implemented the use of half-a-day units instead, and found the code velocity to be quite accurate, now only disrupted by isolated errors of estimation.
 
 \subsection{Summary}
+Doing all of these tasks associated with planning takes a lot of time, but are they really worth it?
+Based on our experiences, the short answer is: yes.
+As mentioned in \Cref{def:planninggame} planning lets you know your velocity, plans for the future, and allows for responding to change rather quickly.
+
+
 %Overhead
 %Flexibility (in terms of changes)
+\Alexander{Check for Planning vs. Planning Game}
