work in progres cite

--- a/Content/Iteration/introduction.tex
+++ b/Content/Iteration/introduction.tex
@@ -1,6 +1,6 @@
 Over the course of this project we have been working in iterations of two weeks, which is approximately one week worth of work on the project. To follow the practice \textit{small releases} there is one release for every two iterations. In this chapter we will cover the goals and findings of each release.
 
-In this project we decided to work with a subset of Essence from \citet{essence:config}. Essence is a methodology rooted in the \textit{Pragmatic Paradigm}, as opposed to the agile or traditional paradigm. Essence is a response to a hyper-complex world view, were the context is constantly evolving and there is no single best criteria to evaluate the product. Essence focuses on creating value for the customer, this is done by facilitating innovative processes. Essence relies on an iterative workflow and adds an extra layer wherein evaluation of the process is done. 
+In this project we decided to work with a subset of Essence from \texttt{Essence: Pragmatic Software Innovation} \citep{essence:config}. Essence is a methodology rooted in the \textit{Pragmatic Paradigm}, as opposed to the agile or traditional paradigm. Essence is a response to a hyper-complex world view, were the context is constantly evolving and there is no single best criteria to evaluate the product. Essence focuses on creating value for the customer, this is done by facilitating innovative processes. Essence relies on an iterative workflow and adds an extra layer wherein evaluation of the process is done. 
 
 We look to essence to evaluate our use of XP practise, this is done by review/retrospective after each iteration.
 
