--- a/Content/MusicPlayer/androidTerms.tex
+++ b/Content/MusicPlayer/androidTerms.tex
@@ -1,5 +1,5 @@
 \section{Android Terminology}
-Here is a few Android specific terms that will be used in the implementation sections. These explanations are based on the Android API Guide Glossary \cite{android:terms} and the Sensor Overview \cite{android:sensor}.
+Here is a few Android specific terms that will be used in the implementation sections. These explanations are based on the Android API Guide Glossary \citep{android:terms} and the Sensor Overview \citep{android:sensor}.
 
 \subsection*{Activity}
 A screen in the application responsible for handles UI events. It is implemented as a Java class with a layout primarily defined in XML.
