--- a/Content/Refactoring/badSmells.tex
+++ b/Content/Refactoring/badSmells.tex
@@ -9,5 +9,5 @@ Examples of bad smells are duplicated code, and long methods. Below each of them
 
 \paragraph{Duplicated Code} is then when similar code structure occurs in multiple places in a program. Most of the time there is no reason to have nearly identical code in multiple places. Often, the code can be extracted, with little or no modified and a new method can be created which is simply called from all methods with the similar code. 
 
-\paragraph{Long Methods} are likely to be harder to understand \citet[p. 64]{fowler:refac}, since readability also affects maintainability it is clearly an unwanted smell. Therefore it is usually desirable to break up a long method into multiple smaller ones. Usually all that is needed is to shorten a long method, is to extract the method and put the parts that seem to fit together in new methods.
+\paragraph{Long Methods} are likely to be harder to understand, see \citet[p. 64]{fowler:refac}, since readability also affects maintainability it is clearly an unwanted smell. Therefore it is usually desirable to break up a long method into multiple smaller ones. Usually all that is needed is to shorten a long method, is to extract the method and put the parts that seem to fit together in new methods.
 
