--- a/Content/Iteration/release2Intro.tex
+++ b/Content/Iteration/release2Intro.tex
@@ -1,4 +1,4 @@
-With the core music player application completed in the 2nd iteration we outlined the configuration for the 3rd and 4th iterations in the configuration table seen in \Cref{table:config1}, which is based on \citet[ch. 3]{essence:config}. The figure should be read vertically, and is meant to provide an overview; each field is explained in more detail in this section. This approach presents the different aspects of the release, including what problem the application should solve and how, and it provides a basis for further development. The configuration table outlines the planned release, and not the finished release.
+With the core music player application completed in the 2nd iteration we outlined the configuration for the 3rd and 4th iterations in the configuration table seen in \Cref{table:config1}, which is based on \texttt{Essence: Pragmatic Software Innovation} \citep[ch. 3]{essence:config}. The figure should be read vertically, and is meant to provide an overview; each field is explained in more detail in this section. This approach presents the different aspects of the release, including what problem the application should solve and how, and it provides a basis for further development. The configuration table outlines the planned release, and not the finished release.
 
 
 \input{Content/Iteration/configurationTable1}
