fixed cite todo

--- a/Content/StepCounter/implementation.tex
+++ b/Content/StepCounter/implementation.tex
@@ -13,7 +13,7 @@ Our implementation utilises an sensitivity limit so measurements which are very 
 \begin{figure}[h!]
   \centering
     \includegraphics[scale=0.8]{Images/accPlot.png}
-  \caption{A acceleration plot from \citet[p. 2]{zhao:pedometer} showing filtered data from a pedometer worn by a person walking}
+  \caption{An acceleration plot from \citet[p. 2]{zhao:pedometer} showing filtered data from a pedometer worn by a person walking.}
   \label{fig:zhaoGraph}
 \end{figure}
 
