Moved todo to appropriate location

--- a/Content/Conclusion/extremeProgramming.tex
+++ b/Content/Conclusion/extremeProgramming.tex
@@ -1,4 +1,5 @@
 \section{Extreme Programming}
+\Kristian{et eller andet sted burde vi skrive om hvordan XP er meget flexible og vores kilder beskriver pratises forskelligt.}
 We chose to use XP because it is a methodology that is aimed towards managing the development process both in regards to organisation and programming. 
 In this section we will try to answer the third problem presented in \Cref{chap:intro}:
 \begin{center}
