--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -37,6 +37,13 @@
  edition = {1st}
 } 
 
+@misc{dict:reference,
+  title={Dictionary.com},
+  year={2015},
+  howpublished = "\url{http://dictionary.reference.com}",
+  note = "[Online; Accessed 2015-06-22]"
+}
+
 @article{musicRunEffectArticle,
 author = {Edworthy, Judy and Waring, Hannah},
 title = {The effects of music tempo and loudness level on treadmill exercise},
