--- a/Content/StepCounter/dataCollection.tex
+++ b/Content/StepCounter/dataCollection.tex
@@ -4,16 +4,16 @@ As there is no built-in step counter library available for Android API version 1
 The first step of data collection is to figure out what data to collect, to do this we take a look at the available sensors on an Android smartphone, \citet{android:sensor} gives an overview of these. We decided to gather data from three sensors: accelerometer, gravity and gyroscope. We also measured the time delay between each sensor reading.
 
 \subsubsection{Collection Procedure}
-To generate the sample data we had a person perform the following tasks while carrying the smartphone in a specific position (in hand, in pocket or strapped to arm)
+To generate the sample data we had a person perform the following tasks while carrying the smartphone in a specific position (in hand, in pocket or strapped to arm).
 \begin{enumerate}
-\item Walk 100 steps. \textit{Walk: to advance on foot at a moderate speed; proceed by steps; move by advancing the feet alternately so that there is always one foot on the ground.} %http://dictionary.reference.com/browse/walk?s=t
-\item Jog 100 steps. \textit{Jog: to run at a leisurely, slow pace.} %http://dictionary.reference.com/browse/jog?s=t
-\item Run 100 steps. \textit{Run: to go quickly by moving the legs more rapidly than at a walk and in such a manner that for an instant in each step both feet are off the ground.} %http://dictionary.reference.com/browse/run?s=t
-\item Sprint 100 steps. \textit{Sprint: to run at full speed.} %http://dictionary.reference.com/browse/sprint?s=t
-\item Alternating. Walk 20 steps followed by jogging 20 steps, running 20 steps, sprinting 20 steps, and walking 20 steps.2
+\item Walk 100 steps. \textit{Walk: to advance on foot at a moderate speed; proceed by steps; move by advancing the feet alternately so that there is always one foot on the ground.}\citep[Walk]{dict:reference} %http://dictionary.reference.com/browse/walk?s=t
+\item Jog 100 steps. \textit{Jog: to run at a leisurely, slow pace.}\citep[Jog]{dict:reference} %http://dictionary.reference.com/browse/jog?s=t
+\item Run 100 steps. \textit{Run: to go quickly by moving the legs more rapidly than at a walk and in such a manner that for an instant in each step both feet are off the ground.}\citep[Run]{dict:reference} %http://dictionary.reference.com/browse/run?s=t
+\item Sprint 100 steps. \textit{Sprint: to run at full speed.}\citep[Sprint]{dict:reference} %http://dictionary.reference.com/browse/sprint?s=t
+\item Alternating. Walk 20 steps followed by jogging 20 steps, running 20 steps, sprinting 20 steps, and walking 20 steps.
 \item Standing still with the phone for 2 minutes.
 \end{enumerate}
-%TODO sort out refs
+\Kristian{Confirm corrent cites}
 
 The purpose of task 1-5 is generate data the algorithms should analyse and correctly calculate the 100 steps taken. The data from task 6 should be interpreted as 0 steps taken.
 
